--- a/index.html
+++ b/index.html
@@ -1,1 +1,91 @@
-hallo ich bins
+<!DOCTYPE html>
+<html lang="de">
+<head>
+  <meta charset="UTF-8">
+  <title>Neue Inkontinenz-Studie schockiert</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #fff;
+      margin: 40px;
+      max-width: 800px;
+    }
+    h1 {
+      font-size: 36px;
+      color: red;
+      text-transform: uppercase;
+    }
+    h2 {
+      font-size: 24px;
+      color: black;
+    }
+    .teaser {
+      font-weight: bold;
+      font-size: 20px;
+      margin-bottom: 20px;
+    }
+    .bild {
+      margin: 20px 0;
+      text-align: center;
+    }
+    .bild img {
+      width: 100%;
+      max-width: 700px;
+      border: 2px solid #ccc;
+    }
+    .bild-caption {
+      font-size: 14px;
+      color: #555;
+      font-style: italic;
+      margin-top: 5px;
+    }
+    .quote {
+      font-style: italic;
+      font-weight: bold;
+      margin: 20px 0;
+      background-color: #f8f8f8;
+      padding: 10px;
+      border-left: 4px solid red;
+    }
+    .faktenkasten {
+      background-color: #ffeb3b;
+      padding: 10px;
+      margin: 30px 0;
+      border: 2px dashed red;
+    }
+  </style>
+</head>
+<body>
+
+  <h1>ALARM IM SCHLAFZIMMER!</h1>
+  <h2>Junge Frauen werden immer früher undicht – NEUE STUDIE SCHOCKIERT DEUTSCHLAND!</h2>
+
+  <p class="teaser">Was früher ein Tabu bei Senioren war, ist heute bitterer Alltag in der Generation Z:  
+  Eine neue Statistik offenbart – unsere Freundinnen verlieren die Kontrolle… schon ab Mitte 20!</p>
+
+  <div class="bild">
+    <img src="https://via.placeholder.com/700x400?text=Symbolbild+Inkontinenz" alt="Symbolbild Inkontinenz">
+    <div class="bild-caption">Wasser marsch? Inzwischen nicht mehr nur in der Dusche: Immer mehr junge Frauen sind betroffen.</div>
+  </div>
+
+  <p>Die Zahlen sind erschütternd: Laut der *Institut für Plötzliche Flüssigkeitsaustritte* (IPF) hat sich der Anteil inkontinenter Frauen unter 30 in den letzten fünf Jahren verdreifacht.</p>
+
+  <p>„Ich musste nie darüber nachdenken – bis ich beim Trampolinspringen plötzlich ein Problem hatte“, berichtet *Marie (27)* aus Castrop-Rauxel. „Jetzt nehme ich immer ein zweites Höschen mit.“</p>
+
+  <div class="quote">„Ich pinkle beim Lachen – und das nicht nur, wenn der Witz gut ist.“ – Betroffene</div>
+
+  <p>Experten schlagen Alarm. Professor Dr. Günther Tropfen von der Universität Wuppertal warnt: „Wir stehen vor einem feuchten Flächenbrand. Wenn wir nicht handeln, wird das ganze Land zur Tropfzone!“</p>
+
+  <div class="bild">
+    <img src="https://via.placeholder.com/700x400?text=Freundin+beim+Joggen" alt="Freundin beim Joggen">
+    <div class="bild-caption">Auch beim Joggen: Plötzlich läuft nicht nur die Nase.</div>
+  </div>
+
+  <div class="faktenkasten">
+    <h3>Was Sie jetzt wissen MÜSSEN!</h3>
+    <ul>
+      <li>💧 Jede 5. Frau unter 30 ist betroffen</li>
+      <li>💡 Ursache: Stress, Koffein, Influencer-Workouts</li>
+      <li>🩲 Beliebt: stylische „Leakwear“ in Pastelltönen</li>
+    </ul>
+  </div>
